# jrg-pypi2bitbake

./: .gitignore  README.md  flake.nix  justfile  shell.nix
.nix/: default.nix
.nix/poetry/: overrides.nix  pyproject.toml
.scripts/: download-sdists  generate-bb-recipes
